Changes selenium to 3.0.2 with chrome (version 2.53.6 is too old for chromedriver).

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,12 +23,12 @@ matrix:
   include:
     - python: "2.7" # For PR and cron
       env:
-        - BROWSER=chrome
+        - BROWSER=firefox
         - SELENIUM=2.53.6
     - python: "3.3" # For PR and cron
       env:
         - BROWSER=chrome
-        - SELENIUM=2.53.6
+        - SELENIUM=3.0.2
     - python: "2.7" # For PR and cron
       env:
         - BROWSER=chrome
